# sprite-sheet-slicer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  run.sh  toolchain-mingw64.cmake
.claude/: settings.local.json
build-windows/: imgui.ini
src/: main.cpp
